# tiny-torch-backend

./: .gitignore  README.md  config.sh  requirements.txt
add/: compile.sh  model_to_mlir.py
chessnet/: compile-blas.sh  compile.sh  main.cpp  model.py  model_to_mlir.py
compiler/: ConvertMatmulToBlas.cpp  build-custom-opt.sh
compiler/include/Dialect/Mnrt/: MnrtOps.td  MnrtPasses.h  MnrtPasses.td
compiler/src/Conversion/: ConvertMemRefToMnrt.cpp
compiler/src/Dialect/Mnrt/: MnrtDialect.cpp
compiler/tools/: CMakeLists.txt  mnrt-opt.cpp
custom-opt/: AddOnePattern.cpp  CMakeLists.txt  ConvertMatmulToBlas.cpp  build-custom-opt.sh  custom-opt.cpp
model/: build_model.py  compile.sh
model/add/: add.md  compile-add-one.sh  compile.sh  main.cpp  model_to_mlir.py  run.cpp
model/cnn/: compile-blas.sh  compile-fuse.sh  run-benchmark.sh
model/convnet/: compile-blas.sh  compile.sh  convnet.md  main.cpp  model.py  model_to_mlir.py  run-benchmark.sh  run.cpp
model/mobilenet/: compile.sh  model_to_mlir.py  run.cpp
